# dbcoverageeval

./: .gitignore  README.md  eval.py  hello.py  main.py  pyproject.toml  test_agent.py
manual_tests/: manual_test_ingest.py  manual_test_judge.py  manual_test_report.py
manual_tests/data/: questions.json  sample_questions.json
sample/: download.py
scripts/eval_llm/: calc_recall.py
scripts/eval_miracl/: calc_recall.py  create_sample.py  eval_llm.py
scripts/k_recall/: compute_recall.py  create_sample.py
src/dbcoverageeval/: __init__.py  cli.py  evaluate.py  index.py  ingest.py  judge.py  querygen.py  report.py  search.py
test_data/: ai_basics.txt  convert_to_pdf.py  manual_test.md  questions.tsv  setup_test.sh  test_ingest.py
test_data/docs/: data_science.txt
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_index.py  test_ingest.py  test_judge.py  test_querygen.py  test_report.py  test_search.py
