[project]
name = "dbcoverageeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GitHub Actions", email = "actions@github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
