[project]
name = "dbcoverageeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GitHub Actions", email = "actions@github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fpdf>=1.7.2",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.14",
    "langchain-text-splitters>=0.3.8",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.4.0",
    "pytest>=8.3.5",
    "reportlab>=4.4.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
